--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 		<script src="newScript.js" defer></script>
 	</head>
 	<body>
-		<button id="restartButton">Restart</button>
-		Row:
-		<input id="Row" type="number" value="42">
-		Col:
-		<input id="Col" type="number" value="42">
+		<div class="topnav" id="myTopnav">
+			<a href="#start" onclick="dijkstra()">Start Algorithm</a>
+			<a href="">Clear</a>
+		</div>
 		<div id="grid"></div>
 	</body>
 </html>
